objects/UEHGeneralSetting__c.object
<CustomObject><fields>
        <fullName>Enable_Blacklist_Logging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This will be able  to toggle between logging and not logging blacklisted incoming messages without changing code</description>
        <label>Enable Blacklist Logging</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Max_Email_Body_Length__c</fullName>
        <description>Maximum clob field length for Email TextBody and HtmlBody</description>
        <label>Max Email Body Length</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Partner_Program_User__c</fullName>
        <description>This will be used as task owner.</description>
        <inlineHelpText>The user alias that will be used to set the default owner</inlineHelpText>
        <label>Partner Program User</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><enableFeeds>false</enableFeeds><label>UEH_General Setting</label><visibility>Protected</visibility></CustomObject>